--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,18 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>11.4.0</version>
+				<configuration>
+					<url>jdbc:mysql://localhost:3306/gambiarra</url>
+					<user>root</user>
+					<password></password>
+				</configuration>
+			</plugin>
+			
 		</plugins>
 	</build>
 
