--- a/FullCycle/package.json
+++ b/FullCycle/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "primeshoes",
+  "name": "fullcycle",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,11 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
+    "flowbite-react": "^0.11.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
